<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="15dp"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_order_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2017-1-1 10:00"/>

    <TextView
        android:id="@+id/order_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_coupons_project"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_size_4dp"
            android:src="@drawable/spend"/>

        <TextView
            android:id="@+id/order_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_price"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_12dp"
            android:padding="@dimen/margin_size_4dp"
            android:src="@drawable/time"/>

        <TextView
            android:id="@+id/order_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_time"/>
    </LinearLayout>

</LinearLayout>