<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/test"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/background"
              android:descendantFocusability="blocksDescendants"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_10dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_order_shopname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_size_10dp"
            android:textSize="@dimen/font_size_12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/margin_size_12dp"
            android:text="@string/tv_daifukuan"
            android:textColor="@color/first_font"
            android:textSize="@dimen/font_size_12sp"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_colour_ee"/>

    <RelativeLayout
        android:id="@+id/rl_order_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.loopj.android.image.SmartImageView
            android:id="@+id/iv_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="@dimen/margin_size_8dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/tv_order_total_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_size_8dp"
            android:text="@string/tv_order_num"
            android:textSize="@dimen/font_size_10sp"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_colour_ee"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_order_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_size_12dp"
            android:text="@string/tv_order_total_price"
            android:textColor="@color/first_font"
            android:textSize="@dimen/font_size_10sp"/>

        <Button
            android:id="@+id/bt_daifukuan_paynow"
            android:layout_width="60dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_size_8dp"
            android:background="@drawable/bt_order_red"
            android:text="@string/tv_paynow"
            android:textColor="#f24141"
            android:textSize="@dimen/font_size_10sp"/>

        <Button
            android:id="@+id/bt_cancel_order"
            android:layout_width="60dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_size_8dp"
            android:layout_toLeftOf="@id/bt_daifukuan_paynow"
            android:background="@drawable/bt_order_grey"
            android:text="@string/tv_cancel"
            android:textColor="@color/font_colour_99"
            android:textSize="@dimen/font_size_10sp"/>
    </RelativeLayout>
</LinearLayout>