<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.ConfirmActivity">


    <RelativeLayout
        android:id="@+id/rl_confirm_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_comfirm_back"
            style="@style/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back" />

        <TextView
            style="@style/tv_white_24_margin8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_confirm_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_confirm_title">

        <LinearLayout
            android:id="@+id/ll_confirm_name"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_size_8dp"
                android:src="@drawable/v2_0_sptjdd_lianxiren" />

            <TextView
                android:id="@+id/tv_confirm_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_size_2dp"

                android:textSize="@dimen/font_size_14sp" />

            <TextView
                android:id="@+id/tv_confirm_telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_size_16dp"
                android:textSize="@dimen/font_size_14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/confirm_line2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/ll_confirm_name"
            android:background="@color/line_colour_ee" />

        <LinearLayout
            android:id="@+id/ll_confirm_address"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_below="@id/confirm_line2"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_size_8dp"
                android:src="@drawable/v2_0_sptjdd_dizhi" />

            <TextView
                android:id="@+id/tv_confirm_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_size_2dp"
                android:textSize="@dimen/font_size_14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_size_10dp"
            android:background="@color/white"
            android:padding="@dimen/margin_size_8dp"
            android:src="@drawable/v2_0_sptjdd_bianji" />
    </RelativeLayout>

    <TextView
        android:id="@+id/confirm_line3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/rl_confirm_address"
        android:background="@color/line_colour_ee" />


    <RelativeLayout
        android:id="@+id/rl_confirm_pay"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/confirm_line3"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/margin_size_8dp"
            android:text="@string/pay_kind" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:text="@string/online_pay"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/rl_confirm_pay"
        android:layout_marginBottom="@dimen/margin_size_8dp"
        android:background="@color/line_colour_ee" />


    <TextView
        android:id="@+id/tv_confirm_sname"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/view"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:textSize="@dimen/font_size_14sp" />

    <TextView
        android:id="@+id/confirm_line4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/tv_confirm_sname"
        android:background="@color/line_colour_ee" />

    <RelativeLayout
        android:id="@+id/rl_confirm_showimg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_line4"
        android:background="@color/white">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_confirm_showimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/confiem_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_size_8dp"
            android:src="@drawable/index_more" />

        <TextView
            android:id="@+id/tv_confirm_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_size_8dp"
            android:layout_toLeftOf="@id/confiem_more"
            android:text="@string/tv_order_num" />

    </RelativeLayout>

    <TextView
        android:id="@+id/confirm_line5"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/rl_confirm_showimg"
        android:background="@color/line_colour_ee" />

    <RelativeLayout
        android:id="@+id/rl_confirm_price"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/confirm_line5"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/margin_size_8dp"
            android:text="@string/tv_confirm_order_price"
            android:textColor="@color/second_font" />

        <TextView
            android:id="@+id/tv_order_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="@dimen/margin_size_8dp"
            android:text="@string/price"

            android:textColor="@color/font_red" />
    </RelativeLayout>

    <TextView
        android:id="@+id/confirm_line6"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/rl_confirm_price"
        android:background="@color/line_colour_ee" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/confirm_line6"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/margin_size_8dp"
            android:text="@string/tv_confirm_ship_price"
            android:textColor="@color/second_font" />

        <TextView
            android:id="@+id/tv_ship_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="@dimen/margin_size_8dp"
            android:text="@string/tv_tijian_price1"
            android:textColor="@color/font_red" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/confirm_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_confirm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:text="@string/tv_confirm_price"
            android:textColor="@color/first_font"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_confirm_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_confirm_text"
            android:text="@string/price"
            android:textColor="@color/font_red"
            android:textSize="@dimen/font_size_18sp" />

        <Button
            android:id="@+id/bt_confirm_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/font_red"
            android:text="@string/bt_confirm"
            android:textColor="@color/white" />

    </RelativeLayout>


</RelativeLayout>
